[tool.poetry]
name = "text-bot"
version = "0.1.0"
description = ""
authors = ["Cinnamon#0004"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
pandas = "^1.2.1"
ffmpeg = "^1.4"
gTTS = "^2.2.3"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
